k8s/05-clients.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client1
  namespace: paxos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client1
  template:
    metadata:
      labels:
        app: client1
        role: client
    spec:
      containers:
      - name: client
        image: paxos-node:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6001
          name: api
        - containerPort: 8000
          name: monitor
---
apiVersion: v1
kind: Service
metadata:
  name: client1
  namespace: paxos
spec:
  selector:
    app: client1
  ports:
  - name: api
    port: 6001
    targetPort: api
  - name: monitor
    port: 8000
    targetPort: monitor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2
  namespace: paxos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client2
  template:
    metadata:
      labels:
        app: client2
        role: client
    spec:
      containers:
      - name: client
        image: paxos-node:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6002
          name: api
        - containerPort: 8000
          name: monitor
---
apiVersion: v1
kind: Service
metadata:
  name: client2
  namespace: paxos
spec:
  selector:
    app: client2
  ports:
  - name: api
    port: 6002
    targetPort: api
  - name: monitor
    port: 8000
    targetPort: monitor
