k8s/07-nodeport-services.yaml
---
# Exposição externa via NodePort para o Client1
apiVersion: v1
kind: Service
metadata:
  name: client1-external
  namespace: paxos
spec:
  type: NodePort
  selector:
    app: client1
  ports:
  - name: api
    port: 6001
    targetPort: api
    nodePort: 30601
  - name: monitor
    port: 8000
    targetPort: monitor
    nodePort: 30801
---
# Exposição externa via NodePort para o Proposer1
apiVersion: v1
kind: Service
metadata:
  name: proposer1-external
  namespace: paxos
spec:
  type: NodePort
  selector:
    app: proposer1
  ports:
  - name: api
    port: 3001
    targetPort: api
    nodePort: 30301
  - name: monitor
    port: 8000
    targetPort: monitor
    nodePort: 30811
---
# Exposição externa via NodePort para o Learner1
apiVersion: v1
kind: Service
metadata:
  name: learner1-external
  namespace: paxos
spec:
  type: NodePort
  selector:
    app: learner1
  ports:
  - name: api
    port: 5001
    targetPort: api
    nodePort: 30501
  - name: monitor
    port: 8000
    targetPort: monitor
    nodePort: 30821
